Visibility, better font on legend, name fix

--- a/static/styles/_map.scss
+++ b/static/styles/_map.scss
@@ -66,7 +66,7 @@ table, th, td {
   margin-top: 15%;
 
   h3 {
-    font-family: 'FarnhamTextBold', 'Comic Sans';
+    font-family: 'FarnhamBold', 'Comic Sans';
     color: #4F4F4F;
   }
 
